--- a/TeamWork/src/app/shared/home-page/home-page.component.css
+++ b/TeamWork/src/app/shared/home-page/home-page.component.css
@@ -152,6 +152,7 @@ body {
     justify-content: center;
     color: white;
     font-weight: bold;
+    font-size: 70%;
 }
 
 .company-avatar.green {
