--- a/TeamWork/src/app/shared/home-page/home-page.component.html
+++ b/TeamWork/src/app/shared/home-page/home-page.component.html
@@ -47,24 +47,22 @@
             </div>
 
             <!-- Job Post 1 -->
-            <div class="job-post">
+
+            <div  *ngFor="let company of companys" class="job-post">
                 <div class="job-header">
-                    <div class="company-avatar">TC</div>
+                    <div class="company-avatar">{{company.companyName}}</div>
                     <div class="job-info">
-                        <h3>Senior Frontend Developer</h3>
-                        <div class="job-meta">TechCorp • Mumbai, Maharashtra • 2 days ago</div>
+                        <h3>{{company.role}}</h3>
+                        <div class="job-meta">{{company.location}}</div>
                     </div>
                 </div>
                 <div class="job-description">
-                    We're looking for a skilled Frontend Developer to join our dynamic team. You'll work on cutting-edge projects using React, TypeScript, and modern development practices. 3+ years experience required.
+                    {{company.jobDetails}}
                 </div>
-                <div class="job-tags">
-                    <span class="job-tag">React</span>
-                    <span class="job-tag">TypeScript</span>
-                    <span class="job-tag">JavaScript</span>
-                    <span class="job-tag">CSS</span>
-                    <span class="job-tag">Remote</span>
-                </div>
+
+                <a [routerLink]="['/single-post',company.id]">view more</a>
+
+                
                 <div class="job-actions">
                     <div class="interaction-buttons">
                         <button class="interact-btn">👍 Like (45)</button>
@@ -77,7 +75,7 @@
             </div>
 
             <!-- Job Post 2 -->
-            <div class="job-post">
+            <!-- <div class="job-post">
                 <div class="job-header">
                     <div class="company-avatar green">DS</div>
                     <div class="job-info">
@@ -104,10 +102,12 @@
                     </div>
                     <button class="apply-btn">Apply Now</button>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Job Post 3 -->
-            <div class="job-post">
+            
+            
+            <!-- <div class="job-post">
                 <div class="job-header">
                     <div class="company-avatar purple">IS</div>
                     <div class="job-info">
@@ -134,7 +134,7 @@
                     </div>
                     <button class="apply-btn">Apply Now</button>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <!-- Right Sidebar -->
