--- a/TeamWork/src/app/shared/navbar/navbar.component.html
+++ b/TeamWork/src/app/shared/navbar/navbar.component.html
@@ -15,7 +15,7 @@
       </div>
       <ul class="nav-links">
         <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">Create Post</a></li>
+        <li><a routerLink="/companyDetails">Create Post</a></li>
         <li><a href="#">Saved Jobs</a></li>
         <li><a href="#">Profile</a></li>
       </ul>
