--- a/TeamWork/src/app/app.component.html
+++ b/TeamWork/src/app/app.component.html
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-<div class="app-container">
+<div >
   <router-outlet></router-outlet>
 </div>
-=======
-<router-outlet></router-outlet>
->>>>>>> 5d332da5acb61780aacfa2a81e29224f0a22f174
