--- a/TeamWork/src/app/auth/login/login.component.html
+++ b/TeamWork/src/app/auth/login/login.component.html
@@ -18,7 +18,7 @@
         {{ errorMessage }}
       </div>
       
-      <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
+      <form (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="username">Username</label>
           <input 
@@ -67,23 +67,4 @@
   <app-footer></app-footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
