--- a/TeamWork/src/app/shared/shared.component.html
+++ b/TeamWork/src/app/shared/shared.component.html
@@ -1,7 +1,7 @@
-<<<<<<< HEAD
-<p>shared works!</p>
-=======
 <app-navbar></app-navbar>
-<app-home-page></app-home-page>
+
+<div class="shared-container">
+  <app-home-page></app-home-page>
+</div>
+
 <app-footer></app-footer>
->>>>>>> 5d332da5acb61780aacfa2a81e29224f0a22f174
