--- a/TeamWork/src/app/auth/register/register.component.html
+++ b/TeamWork/src/app/auth/register/register.component.html
@@ -8,15 +8,14 @@
       {{ errorMessage }}
     </div>
     
-    <form #registerForm="ngForm" (ngSubmit)="onSubmit()">
+    <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="username">Username</label>
         <input 
           type="text" 
           id="username" 
-          name="username" 
-          autocomplete="username"
-          [(ngModel)]="username" 
+          name="username"
+          [(ngModel)]="username"
           required>
       </div>
       
@@ -25,9 +24,8 @@
         <input 
           type="email" 
           id="email" 
-          name="email" 
-          autocomplete="email"
-          [(ngModel)]="email" 
+          name="email"
+          [(ngModel)]="email"
           required>
       </div>
       
@@ -36,19 +34,17 @@
         <input 
           type="text" 
           id="fullname" 
-          name="fullname" 
-          autocomplete="name"
-          [(ngModel)]="fullname" 
+          name="fullname"
+          [(ngModel)]="fullname"
           required>
       </div>
       
       <div class="form-group">
-        <label for="password">Password (6+ characters)</label>
+        <label for="password">Password</label>
         <input 
           type="password" 
           id="password" 
           name="password"
-          autocomplete="new-password"
           [(ngModel)]="password">
       </div>
       
@@ -58,7 +54,6 @@
           type="password" 
           id="confirmPassword" 
           name="confirmPassword"
-          autocomplete="new-password"
           [(ngModel)]="confirmPassword">
       </div>
       
@@ -67,32 +62,25 @@
         <input 
           type="date" 
           id="dob" 
-          name="dob" 
-          autocomplete="bday"
-          [(ngModel)]="dob" 
+          name="dob"
+          [(ngModel)]="dob"
           required>
       </div>
       
-      <div class="agreement-text">
-        By clicking Submit, you agree to our Terms of Service and Privacy Policy.
-      </div>
-      
       <div class="submit-container">
-        <button type="submit" class="submit-button">Submit</button>
+        <button type="submit" class="submit-button" [disabled]="isLoading">
+          <span *ngIf="!isLoading">Register</span>
+          <span *ngIf="isLoading">Processing...</span>
+        </button>
       </div>
     </form>
     
-    <div class="divider">
-      <span>or</span>
-    </div>
-    
     <div class="login-link">
-      Already have an account? <a href="javascript:void(0)" (click)="navigateToLogin()">Sign in</a>
+      Already have an account? <a href="javascript:void(0)" (click)="navigateToLogin()">Login</a>
     </div>
   </div>
 </div>
 
 <app-footer></app-footer>
-
 
 
