--- a/TeamWork/src/app/auth/login/login.component.html
+++ b/TeamWork/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="login.component.css" />
 </head>
 <body>
-  <app-navbar></app-navbar>
+  <!-- <app-navbar></app-navbar> -->
 
   <div class="login-container">
     <div class="login-box">
