--- a/TeamWork/src/app/share/navbar/navbar.component.html
+++ b/TeamWork/src/app/share/navbar/navbar.component.html
@@ -15,8 +15,9 @@
       </div>
       <ul class="nav-links">
         <li><a href="#" class="active">Home</a></li>
-        <li><a routerLink="/companyDetails">Create Post</a></li>
-        <li><a href="#">Saved Jobs</a></li>
+        <li><a *ngIf="admin" routerLink="/companyDetails">Create Post</a></li>
+        <li><a (click)="viewPost()" *ngIf="admin" routerLink="/mypost">My Post</a></li>
+        <li><a *ngIf="user" >Saved Jobs</a></li>
         <li><a href="#">Profile</a></li>
       </ul>
     </div>
