--- a/TeamWork/src/app/user/personal-info/personal-info.component.css
+++ b/TeamWork/src/app/user/personal-info/personal-info.component.css
@@ -1,6 +1,13 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0; /* or white or any neutral background */
+}
+
 .container {
   display: flex;
   height: 100vh;
+  width: 100vw;
 }
 
 .sidebar {
